Test commit on google code.

--- a/trace_collect/README
+++ b/trace_collect/README
@@ -32,3 +32,4 @@ eg: mpicc -o test_mpiio test_mpiio.c  -liosig
 
 Or add '-L/your/path/to/mpich2-install/lib -liosig' if the path cannot be found by 'make'.
 
+Last modification: 4/19/2012
