--- a/trace_analyzer/README
+++ b/trace_analyzer/README
@@ -15,5 +15,6 @@ $ make
 2. Use the following command for help information.
 $ ./detect_iosig
 
-Then following the help information and user's guide on Google Project Hosting: http://code.google.com/p/iosig/wiki/userGuide.
+Then following the help information and user's guide on Google Project Hosting:
+http://code.google.com/p/iosig/wiki/userGuide.
 
